[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/HexGrid.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/LevelEditor.gd" type="Script" id=2]
[ext_resource path="res://scene/Hex.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/Paintbrush.gd" type="Script" id=4]

[node name="LevelEditor" type="Node"]
script = ExtResource( 2 )

[node name="PlayableHexGrid" parent="." instance=ExtResource( 1 )]
origin_hex = Vector2( 160, 180 )
placeable = true

[node name="ExampleHexGrid" parent="." instance=ExtResource( 1 )]
origin_hex = Vector2( 480, 180 )
placeable = true

[node name="Save" type="Button" parent="."]
margin_left = 46.0
margin_top = 328.0
margin_right = 87.0
margin_bottom = 348.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hex" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 15 )
on_grid = true
interactable = true

[node name="Hex2" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 48 )
on_grid = true
interactable = true

[node name="Hex3" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 81 )
on_grid = true
interactable = true

[node name="Hex4" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 114 )
on_grid = true
interactable = true

[node name="Hex5" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 148 )
on_grid = true
interactable = true

[node name="Hex6" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 182 )
on_grid = true
interactable = true

[node name="Hex7" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 216 )
on_grid = true
interactable = true

[node name="Hex8" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 251 )
on_grid = true
interactable = true

[node name="Hex9" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 286 )
on_grid = true
interactable = true

[node name="Hex10" parent="." groups=[
"placeable",
] instance=ExtResource( 3 )]
position = Vector2( 17, 318 )
on_grid = true
interactable = true

[node name="PaintBrush" parent="." instance=ExtResource( 3 )]
position = Vector2( 618, 41 )
script = ExtResource( 4 )
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
